<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thermocouples</string>
    <string name="launcher_name">Thermo\nCouples</string>

    <string name="tcTitleTest">Type K Thermocouple</string>
    <string name="tcPositive">Positive (+) Metal</string>
    <string name="tcNegative">Negative (-) Metal</string>
    <string name="tcTempRange">Temperature Range</string>
    <string name="tcExtra">Extra Information</string>
    <string name="tcDetailTest1">Platinum-30% Rhodium</string>
    <string name="tcDetailTest2">Platinum-6% Rhodium</string>
    <string name="tcDetailTest3">-200 to 350°C</string>
    <string name="tcDetailTest4">R and S</string>
    <string name="menu_settings">Settings</string>
    <string name="imgdesc">Thermocouple colours</string>

    <string name="calcviewEditTextHint">Enter Temperature</string>

    <string name="tccalcEditTextHint">Enter mV</string>
    <string name="tccalc2EditTextHint">Enter Temp(°C)</string>
    <string name="tccalcRefTempText">(0°C Reference temperature)</string>

    <string name="STSLogo">Southern Temperature Sensors Logo</string>
    <string name="inputTemp">Temperature Input Unit</string>
    <string name="outputTemp">Converted Temperature</string>
    <string name="title_activity_info">Information</string>
    <string name="infotitle">Information</string>
    <string name="info1">This application is for quick reference use only, there may be errors or inaccuracies  although I try to ensure the information is as accurate as possible. \nMe, the app maker, or the application sponsor will not be held liable for any misinformation as a result of using this app. This app uses the ActionBarSherlock library developed by Jake Wharton which is licensed under the Apache License, Version 2.0</string>
    <string name="iiec">IEC: IEC584-3 international</string>
    <string name="ibs">BS: BS 1843 British/Czech</string>
    <string name="iansi">ANSI: ANSI MC96.1 USA/Canada</string>
    <string name="infe">NFE: NFE-18001 French </string>
    <string name="idin">DIN: DIN 43710 Germany/Netherlands</string>
    <string name="ijis">JIS: JIS C 1610-1981 Japanese </string>
    <string name="title_activity_tc_calc">TcCalc</string>
    <string name="title_activity_calc_holder">Converters</string>
    <string name="title_activity_thermocouple_search">Search</string>

    <string name="action_search">Search Thermocouples</string>
    <string name="action_converters">Conversion Calculators</string>
    <string name="action_info">Information</string>
    <string name="action_rtd">RTD calculator</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

</resources>