<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:scrollbars="none"
        tools:context=".Info" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/pad_s"
                android:paddingRight="@dimen/pad_s"
                android:paddingTop="@dimen/pad_l"
                android:paddingBottom="@dimen/pad_s"
                android:textColor="@color/secondary20"
                android:background="@color/secondary80"
                android:layout_marginBottom="@dimen/pad_s"
                android:textSize="36dp"
                android:textStyle="normal"
                android:text="Information" />



        <TextView
            style="@style/infotitle"
            android:text="Standards" />



                <TextView
                style="@style/infoColourStandards"
                android:text="@string/iiec"/>
                <TextView
                style="@style/infoColourStandards"
                android:text="@string/ibs"/>
                <TextView
                style="@style/infoColourStandards"
                android:text="@string/iansi"/>
                <TextView
                style="@style/infoColourStandards"
                android:text="@string/infe"/>
                <TextView
                style="@style/infoColourStandards"
                android:text="@string/idin"/>
                <TextView
                style="@style/infoColourStandards"
                android:text="@string/ijis"/>
                <TextView
                style="@style/infoColourStandards"
                android:text=" "/>


            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:text="@string/info_link"
                android:layout_marginLeft="@dimen/pad_s"
                android:layout_marginBottom="@dimen/pad_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info_button_sponsor" />


        <TextView
            style="@style/infotitle"
            android:text="Disclaimer" />

            <TextView
                style="@style/infoParagraph"
                android:text="@string/info1"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>

